# NeoPy

./: .envrc  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: python-package.yml
